flux/apps/keel/httproute.enc.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
    name: keel
    namespace: system-addon
spec:
    parentRefs:
        - name: traefik-gateway
          namespace: system-addon
    hostnames:
        - ENC[AES256_GCM,data:989A9+m9nXKrAxrq7HYlwwuaCyG9ekIY+lU=,iv:5eRAwZO/anuCJLtxhtuAHUxhFgtUHAYTvBzvgzeJPp4=,tag:z3jacClQ8wQrEJK+x/8yRA==,type:str]
    rules:
        - matches:
            - path:
                type: PathPrefix
                value: /
          backendRefs:
            - name: keel
              port: 9300
sops:
    age:
        - enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1aDMwTjh6dXMrWnBwbWVr
[...]
            SXOTxqLwwo1okgigb9QOTs9mdJ12Zn+MkOEecgJHLUVEi1SK4tqWhQ==
            -----END AGE ENCRYPTED FILE-----
          recipient: age15kgnnd0nlu5vxerhfcrzh5y77x7efudnk74sk4d6z3zn29yltc5q25r54a
    encrypted_regex: ^(hostnames)$
    lastmodified: "2026-08-20T16:36:10Z"
    mac: ENC[AES256_GCM,data:LW7UAag2WiK1Svso7Iw3T3Ty0FKgGHiweSzRdEC0KlaRlTrsx4UuJsAAOYn+chL3RI/sgoXQ8JRcPy8gf4O21k+ewAOY95hiUACqPo6YvhG7GIx94eRv7dUPnTyiBX55o2bo1xMD8OrcqpQT1AgBG9s2r0pke4ErN0hF45TC7M8=,iv:3kZ8bBwfjKzJtgMply6MeWW5NkLGNlm3yXW2sqkHGXA=,tag:s6kn82izSLDDlOhZv9vZtw==,type:str]
    version: 3.13.2
